tinyc/test/bad/ptr-arith-add.c
int main()
{
    int x;
    int *p = &x;

    p + p;

    return 0;
}
